Fixes white nub in corner of code blocks with scrollbars

--- a/vscode/assets/client/styles/vscode-stream.less
+++ b/vscode/assets/client/styles/vscode-stream.less
@@ -45,6 +45,10 @@ body.preload * {
 					}
 				}
 			}
+
+			.code::-webkit-scrollbar-corner {
+				background-color: rgba(0, 0, 0, 0);
+			}
 		}
 
 		.at-mention.me {
